# UBB-Projects

OOP/lab02-04/: CMakeLists.txt  main.c  validator.c  validator.h
OOP/lab02-04/UI/: ui.c  ui.h
OOP/lab02-04/domain/: RawMaterial.c  RawMaterial.h
OOP/lab02-04/repo/: repo.c  repo.h
OOP/lab02-04/service/: service.c  service.h
OOP/lab02-04/teste/: teste.c  teste.h
OOP/lab6-7/: CMakeLists.txt  main.cpp
OOP/lab6-7/domain/: Masina.cpp  Masina.h  Validator.cpp  Validator.h  VectorDinamic.cpp  VectorDinamic.h
OOP/lab6-7/repo/: Repo.cpp  Repo.h
OOP/lab6-7/service/: Service.cpp  Service.h
OOP/lab6-7/teste/: teste.cpp  teste.h
OOP/lab6-7/ui/: Ui.cpp  Ui.h
